Fix styling issues on mobile

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,7 +1,5 @@
 :host {
     display: flex;
-    height: 100vh;
-    width: 100vw;
     flex-direction: column;
     align-items: center;
     gap: 32px;
