--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,5 @@
 :root {
     font-family: sans-serif;
-    display: flex;
     background: #222;
     color: #aaa;
     font-size: 16pt;
